[package]
name = "pandora-api-derive"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
darling = "0.10"
heck = "0.3"
