[package]
name = "pandora-api-derive"
version = "0.1.0"
edition = "2018"
authors = ["Will Page <compenguy@gmail.com>"]
description = "Defines a derive macro and some attributes to simplify authoring structs that can be serialized as Pandora API requests."
repository = "https://github.com/compenguy/pandora-api-derive.git"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
darling = "0.10"
heck = "0.3"
